Inicio de estilização com CSS

--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Di Matteo - Camisas de Futebol</title>
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ ao <em>Di Matteo - Camisas de Futebol</em>!</h1>
-        <p>Sua torcida começa aqui!</p>
+        <h1><b>Bem-vind@ ao <em>Di Matteo - Camisas de Futebol</em>! </b> </h1>
+        <p class="slogan"> <b>Sua torcida começa aqui!!!</b> </p>
     </div>
 
     <div>
@@ -19,14 +20,14 @@
         <a href="funcionarios.html">Funcionários</a>
     </div>
 
-    <div>
+    <b class="frase">
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
-        Aqui você encontra a camisa oficial do seu time do coração!
+        <b> <u>Aqui você encontra a camisa oficial do seu time do coração! </u></b>
         
     </div>
 
     <div>
-        <p>Siga-nos nas redes sociais!</p>
+        <p class="siga-redes">Siga-nos nas redes sociais!</p>
 
         <div>
             <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
