--- a/semana3/sistema-loja/add-produto.html
+++ b/semana3/sistema-loja/add-produto.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Adicionar Produto</title>
 </head>
 <body>
     <div>
-        <p>Di Matteo - Camisas de Futebol</p>
+        <p class="nome-empresa"> <u><b><i> Di Matteo - Camisas de Futebol </i></b></u> </p>
+        
     </div>
     
     <div>
