--- a/semana3/sistema-loja/funcionarios.html
+++ b/semana3/sistema-loja/funcionarios.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Funcionários</title>
 </head>
 <body>
     <div>
-        <p>Di Matteo - Camisas de Futebol</p>
+        <p class="nome-empresa" > <b><i> Di Matteo - Camisas de Futebol</b></i> </p>
     </div>
     
     <div>
