--- a/semana3/portfolio/contato.html
+++ b/semana3/portfolio/contato.html
@@ -25,40 +25,23 @@ Labenu</a>
 
         </div>
 
-    </div>
 
-    <div class="principal">
-        <img class="foto-perfil" src="img/Foto 
-perfil GitHub.jpg" alt="Minha foto">
-    </div>
+    <div class="email">
+     <h2><u>Contato</u></h2>
+     <br>
 
-    <div>
-     <h2><u>Meu Perfil</u></h2>
-        <p class="texto-perfil" >
-            Sou nascido em Curitiba/PR, cidade 
-na qual continuo vivendo, hoje com 
-37 anos, 
-            <br> pai de 3 filhos, iniciei um 
-processo de transição de carreira, 
-saindo da área comercial<br>e 
-desejando me tornar um 
-Desenvolvedor Web Full Stack com o 
-auxílio da Labenu.
+        <p> <b> E-mail: </b> alexandre.rafael07@gmail.com
         </p>
-    </div>
+        <br>
+        
+        <p> <b> Fone:</b> (41) 99595-4307</p>
 
-        <h3><u>Habilidades</u><h3>
-        <ul>
-            <li>Trabalhar em grupo</li>
-            <li>Falar em público</li>
-            <li>Resolução de problemas</li>
-            <li>Gestão de pessoas</li>
-        </ul>
 
-    </div>
 
     <div class="rodape-footer">
         <h3>Redes Sociais</h3>
+        <br>
+
         <a href="https://www.linkedin.com/in/
 alexandre-r-2a85491a0" 
 target="_blanck">LinkedIn</a>
