--- a/semana3/portfolio/projetos.html
+++ b/semana3/portfolio/projetos.html
@@ -25,40 +25,19 @@ Labenu</a>
 
         </div>
 
-    </div>
-
-    <div class="principal">
-        <img class="foto-perfil" src="img/Foto 
-perfil GitHub.jpg" alt="Minha foto">
-    </div>
-
     <div>
-     <h2><u>Meu Perfil</u></h2>
-        <p class="texto-perfil" >
-            Sou nascido em Curitiba/PR, cidade 
-na qual continuo vivendo, hoje com 
-37 anos, 
-            <br> pai de 3 filhos, iniciei um 
-processo de transição de carreira, 
-saindo da área comercial<br>e 
-desejando me tornar um 
-Desenvolvedor Web Full Stack com o 
-auxílio da Labenu.
-        </p>
-    </div>
+     <h2><u>Projetos</u></h2>
 
-        <h3><u>Habilidades</u><h3>
-        <ul>
-            <li>Trabalhar em grupo</li>
-            <li>Falar em público</li>
-            <li>Resolução de problemas</li>
-            <li>Gestão de pessoas</li>
-        </ul>
-
+     <div> 
+        <img id="foto-projeto"src="img/2021-08-26 (6).png" alt="Foto projeto lojas">
     </div>
+<br>
+<br>
 
     <div class="rodape-footer">
         <h3>Redes Sociais</h3>
+        <br>
+
         <a href="https://www.linkedin.com/in/
 alexandre-r-2a85491a0" 
 target="_blanck">LinkedIn</a>
